--- a/xss/production/test/pixastic.html
+++ b/xss/production/test/pixastic.html
@@ -922,7 +922,7 @@ img1.hsl_filter.set_lightness(img1.hsl_filter.options.lightness + 4);
             __label7.set_y(85);
             __label7.text("Mono");
 		    invert_check = 
-			new ui.StateButton(edges_options.manager, edges_options, "images/checked.jpg", "images/unchecked.jpg");
+			new ui.StateButton(edges_options.manager, edges_options, "images/checked.png", "images/unchecked.png");
         invert_check = invert_check;
             invert_check.set_x(40);
             invert_check.set_y(130);
