--- a/xss/production/test/jquery7.html
+++ b/xss/production/test/jquery7.html
@@ -24,8 +24,20 @@ $(function() {
 			var edit1 = $("#edit1");
 			var btn1 = $("#btn1").button();
 			var app = $("#app");
-function build_application(host, canvasId)
-{
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+<script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
+<script type="text/javascript" src="../js/jquery.utils.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/resig.js"></script>
+<script type="text/javascript" src="../js/event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+		<script type="text/javascript" src="../js/ui.js"></script>
+		<script type="text/javascript" src="../js/sequence.js"></script>
+		<script type="text/javascript" src="../js/streamer.js"></script>
+<script type="text/javascript">
     var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
@@ -99,14 +111,14 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-            fade_in = Class.create(state.Sequence,
-        {
-    initialize: function($super
-                , manager
+        var fade_in = state.Sequence.extend(
+    {
+    init: function(
+                manager
                 )
     {
-        $super(
-        manager        );
+        this._super(
+		manager        );
         this.events = new ev.EventHolder(); 
         var this__  = this;
                 var this__ = this;
@@ -118,7 +130,7 @@ function start(resolution)
             },
             [
         {t: 0, value: 0},
-        {t: 1, value: 70},
+        {t: 1, value: 30},
             ]);
             this.addHandler(____i1);	              
         var ____i2 = new state.Interpolator(
@@ -128,21 +140,17 @@ function start(resolution)
                 this__.target.alpha(value);
             },
             [
-        {t: 1, value: 70},
+        {t: 1, value: 30},
         {t: 2, value: 100},
             ]);
             this.addHandler(____i2);	              
+            this.target = null;
             this.events.dispatch("init", [this]);
             },
 });
-	var ev_parent = this;
-	application.events.addListener("init", function()
-	{    
-	}
-	);
 window.onload = function() 
 {
-	drawingCanvas = document.getElementById("");
+	drawingCanvas = document.getElementById("myCanvas");
     g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
@@ -254,7 +262,13 @@ g_sequence_manager);
 		});
 	}
 }
-}
+</script>
+</head>
+<body>	
+	<canvas id="myCanvas" width="600" height="400"
+		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+</body>
+</html>
         if (application.init)
             application.init();
     });
