--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title></title>
-<script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
-<script type="text/javascript" src="../js/jquery.utils.js"></script>
-<script type="text/javascript" src="../js/utils.js"></script>
-<script type="text/javascript" src="../js/resig.js"></script>
-<script type="text/javascript" src="../js/event.js"></script>
-<script type="text/javascript" src="../js/keys.js"></script>
-		<script type="text/javascript" src="../js/ui.js"></script>
-		<script type="text/javascript" src="../js/sequence.js"></script>
-		<script type="text/javascript" src="../js/streamer.js"></script>
-<script type="text/javascript">
-    var drawingCanvas;		
+app.application = (function (host)
+{
+var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -124,8 +112,8 @@ function start(resolution)
 });
 window.onload = function() 
 {
-	drawingCanvas = document.getElementById("myCanvas");
-    g_canvas = drawingCanvas;
+        drawingCanvas = document.getElementById("app");
+        g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
 		var client =
@@ -236,10 +224,4 @@ g_sequence_manager);
 		});
 	}
 }
-</script>
-</head>
-<body>	
-	<canvas id="myCanvas" width="600" height="400"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
-</body>
-</html>
+})(application);
